@@ -1,15 +1,6 @@
 # FisherMail
-cross-platform e-mail client
-
+cross-platform e-mail client  
 (only for Gmail just yet)
-
-## cross platform 
-__*`Java 8 or newer with JavaFX required`*__
-
-all platforms [FisherMail.jar](http://speederpan.uk.to/jenkins/job/PROD%20mail-client-distrib/lastSuccessfulBuild/artifact/mail-client-distrib/distrib/FisherMail.jar),
-starts with double-click or with command `java -jar FisherMail.jar`
-
-all windows [FisherMail.exe](http://speederpan.uk.to/jenkins/job/PROD%20mail-client-distrib/lastSuccessfulBuild/artifact/mail-client-distrib/distrib/FisherMail.exe) 
 
 ## system specific\*
 
@@ -22,6 +13,22 @@ all windows [FisherMail.exe](http://speederpan.uk.to/jenkins/job/PROD%20mail-cli
 [macOs](http://speederpan.uk.to/jenkins/job/PROD%20mail-client-distrib/lastSuccessfulBuild/artifact/mail-client-distrib/distrib/FisherMail-macOs.zip)
 
 \**includes Java SE Runtime Environment 8*
+
+## cross platform 
+__*`Java 8 or newer with JavaFX required`*__
+
+[FisherMail.jar](http://speederpan.uk.to/jenkins/job/PROD%20mail-client-distrib/lastSuccessfulBuild/artifact/mail-client-distrib/distrib/FisherMail.jar)
+
+### windows
+download and install the [latest version of Java](https://www.java.com/en/download/)  
+start FisherMail with a double-click on file FisherMail.jar
+
+### ubuntu
+install Java and JavaFx  
+`sudo apt install default-jre openjfx`
+
+start FisherMail with command  
+`java --module-path /usr/share/openjfx/lib --add-modules=javafx.web,javafx.swing -jar FisherMail.jar`
 
 ## continuous integration
 latest build available in [Jenkins](http://speederpan.uk.to/jenkins/job/DEV%20mail-client-distrib)
